--- a/tidal.cabal
+++ b/tidal.cabal
@@ -32,6 +32,7 @@ library
                        Sound.Tidal.Epic.Instances
                        Sound.Tidal.Epic.Params
                        Sound.Tidal.Epic.Parse.Cmd
+                       Sound.Tidal.Epic.Parse.EpicOrOp
                        Sound.Tidal.Epic.Parse.File
                        Sound.Tidal.Epic.Parse.Utils
                        Sound.Tidal.Epic.Scales
