--- a/tidal.cabal
+++ b/tidal.cabal
@@ -77,6 +77,7 @@ library
               , stm
               , HUnit
               , megaparsec
+              , scientific
               , Unique
 
 
