use Prisms to "simplify" the boolean constructor tests

--- a/tidal.cabal
+++ b/tidal.cabal
@@ -76,6 +76,7 @@ library
               -- jbb
               , stm
               , HUnit
+              , lens
               , megaparsec
               , scientific
               , Unique
