--- a/tidal.cabal
+++ b/tidal.cabal
@@ -34,9 +34,10 @@ library
                        Sound.Tidal.Epic.Parse.Cmd
                        Sound.Tidal.Epic.Parse.EpicOrOp
                        Sound.Tidal.Epic.Parse.File
+                       Sound.Tidal.Epic.Parse.SeqCommand
+                       Sound.Tidal.Epic.Parse.SeqCommand2Stage
                        Sound.Tidal.Epic.Parse.Utils
                        Sound.Tidal.Epic.Scales
-                       Sound.Tidal.Epic.SeqCommand
                        Sound.Tidal.Epic.Sounds
                        Sound.Tidal.Epic.Test
                        Sound.Tidal.Epic.Transform
