write an Eq instance for Epics and Epic operators

--- a/tidal.cabal
+++ b/tidal.cabal
@@ -33,6 +33,7 @@ library
                        Sound.Tidal.Epic.Params
                        Sound.Tidal.Epic.Parse.Cmd
                        Sound.Tidal.Epic.Parse.EpicOrOp
+                       Sound.Tidal.Epic.Parse.Eq
                        Sound.Tidal.Epic.Parse.File
                        Sound.Tidal.Epic.Parse.SeqCommand
                        Sound.Tidal.Epic.Parse.SeqCommand2Stage
