rename Parse.SeqCommand -> Parse.Transform

--- a/tidal.cabal
+++ b/tidal.cabal
@@ -35,7 +35,7 @@ library
                        Sound.Tidal.Epic.Parse.Expr
                        Sound.Tidal.Epic.Parse.Eq
                        Sound.Tidal.Epic.Parse.File
-                       Sound.Tidal.Epic.Parse.SeqCommand
+                       Sound.Tidal.Epic.Parse.Transform
                        Sound.Tidal.Epic.Parse.SingletonMap
                        Sound.Tidal.Epic.Parse.Types
                        Sound.Tidal.Epic.Parse.Utils
