--- a/tidal.cabal
+++ b/tidal.cabal
@@ -35,6 +35,7 @@ library
                        Sound.Tidal.Epic.Parse.Expr
                        Sound.Tidal.Epic.Parse.Eq
                        Sound.Tidal.Epic.Parse.Transform
+                       Sound.Tidal.Epic.Parse.Scale
                        Sound.Tidal.Epic.Parse.SingletonMap
                        Sound.Tidal.Epic.Parse.Types
                        Sound.Tidal.Epic.Parse.Utils
