--- a/tidal.cabal
+++ b/tidal.cabal
@@ -31,7 +31,7 @@ library
                        Sound.Tidal.Epic.DirtNetwork
                        Sound.Tidal.Epic.Instances
                        Sound.Tidal.Epic.Params
-                       Sound.Tidal.Epic.Parse.Cmd
+                       Sound.Tidal.Epic.Parse.Lexeme
                        Sound.Tidal.Epic.Parse.Expr
                        Sound.Tidal.Epic.Parse.Eq
                        Sound.Tidal.Epic.Parse.Transform
