--- a/tidal.cabal
+++ b/tidal.cabal
@@ -29,6 +29,7 @@ library
                        Sound.Tidal.Epic.Abbreviations
                        Sound.Tidal.Epic.CombineEpics
                        Sound.Tidal.Epic.DirtNetwork
+                       Sound.Tidal.Epic.Harmony
                        Sound.Tidal.Epic.Instances
                        Sound.Tidal.Epic.Params
                        Sound.Tidal.Epic.Parse.Lexeme
