parse samples in music/, replace syParams with syFreq record some timbres

--- a/tidal.cabal
+++ b/tidal.cabal
@@ -45,6 +45,7 @@ library
                        Sound.Tidal.Epic.ReadHsAsGhci
                        Sound.Tidal.Epic.Scale
                        Sound.Tidal.Epic.Sounds
+                       Sound.Tidal.Epic.SyTimbres
                        Sound.Tidal.Epic.Test
                        Sound.Tidal.Epic.Transform
                        Sound.Tidal.Epic.Types
