--- a/tidal.cabal
+++ b/tidal.cabal
@@ -14,7 +14,8 @@ build-type:          Simple
 cabal-version:       >=1.10
 tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
 
-Extra-source-files: README.md CHANGELOG.md tidal.el doc/tidal.md
+Extra-source-files: README.md CHANGELOG.md tidal.el
+                    -- doc/tidal.md
 
 Description: Tidal is a domain specific language for live coding pattern.
 
@@ -97,17 +98,17 @@ source-repository head
   type:     git
   location: https://github.com/tidalcycles/Tidal
 
-test-suite test
-  default-language:
-    Haskell2010
-  type:
-    exitcode-stdio-1.0
-  hs-source-dirs:
-    tests
-  main-is:
-    test.hs
-  build-depends:
-      base >= 4 && < 5
-              , tasty >= 0.11
-              , tasty-hunit
-    , tidal
+-- test-suite test
+--   default-language:
+--     Haskell2010
+--   type:
+--     exitcode-stdio-1.0
+--   hs-source-dirs:
+--     tests
+--   main-is:
+--     test.hs
+--   build-depends:
+--       base >= 4 && < 5
+--               , tasty >= 0.11
+--               , tasty-hunit
+--     , tidal
