--- a/tidal.cabal
+++ b/tidal.cabal
@@ -4,7 +4,7 @@ synopsis:            Pattern language for improvised music
 -- description:
 homepage:            http://tidalcycles.org/
 license:             GPL-3
-license-file:        LICENSE
+-- license-file:        LICENSE
 author:              Alex McLean
 maintainer:          Alex McLean <alex@slab.org>, Mike Hodnick <mike.hodnick@gmail.com>
 Stability:           Experimental
@@ -14,8 +14,8 @@ build-type:          Simple
 cabal-version:       >=1.10
 tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
 
-Extra-source-files: README.md CHANGELOG.md tidal.el
-                    -- doc/tidal.md
+Extra-source-files: README.md
+                    -- CHANGELOG.md tidal.el doc/tidal.md
 
 Description: Tidal is a domain specific language for live coding pattern.
 
