--- a/tidal.cabal
+++ b/tidal.cabal
@@ -40,6 +40,7 @@ library
                        Sound.Tidal.Epic.Parse.Phoneme.Number
                        Sound.Tidal.Epic.Parse.Phoneme.ParamMap
                        Sound.Tidal.Epic.Parse.Phoneme.Scale
+                       Sound.Tidal.Epic.Parse.Phoneme.Transform
                        Sound.Tidal.Epic.Parse.Transform
                        Sound.Tidal.Epic.Parse.Types
                        Sound.Tidal.Epic.Parse.Util
