start translating DirtNetwork.hs (the SuperCollider interface)   from branch epic

--- a/tidal.cabal
+++ b/tidal.cabal
@@ -25,6 +25,7 @@ library
   Exposed-modules:
 
                        Sound.Tidal.Vector
+                       Sound.Tidal.Vector.DirtNetwork
                        Sound.Tidal.Vector.Types
                        Sound.Tidal.Vector.Test
 
