discover how to mutate a vector

--- a/tidal.cabal
+++ b/tidal.cabal
@@ -71,6 +71,7 @@ library
               , scientific
               , Unique
               , vector
+              , vector-algorithms
 
 source-repository head
   type:     git
