use xclip to quickly generate a map from some things' names to them

--- a/tidal.cabal
+++ b/tidal.cabal
@@ -93,6 +93,7 @@ library
               , megaparsec
               , scientific
               , Unique
+              , process
 
 
 source-repository head
